expected/main/lc/if-exprs-illegal6.err
ERROR: "actual/main/lc/if-exprs-illegal6.llc", line 4
  cand6 x y = if then else
                 ^
Syntax error in expression

ERROR: "actual/main/lc/if-exprs-illegal6.llc", line 4
  cand6 x y = if then else
                 ^
Trailing token(s) ("then" keyword) at end of input

ERROR: Aborting after 2 previously reported errors

